test: Refactor test for improved readability