@@ -10,12 +10,12 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Scanner;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 class OptionTest {
     @Nested
@@ -23,14 +23,13 @@ class OptionTest {
     class listBooks {
         @Test
         void testbook() {
-            ByteArrayOutputStream outputStream;
-            outputStream = new ByteArrayOutputStream();
-            System.setOut(new PrintStream(outputStream));
-            ListBooksOption listBooksOption = new ListBooksOption(new ConsoleManager(new Scanner(System.in)));
+            ConsoleManager consoleManagerMock = mock(ConsoleManager.class);
+            ListBooksOption listBooksOption = new ListBooksOption(consoleManagerMock);
 
-            listBooksOption.execute(Arrays.asList(new Book(1, "someTitle", "someAuthor", 1992)));
+            List<Book> books = List.of(new Book(1, "someTitle", "someAuthor", 1992));
+            listBooksOption.execute(books);
 
-            assertTrue(outputStream.toString().contains(String.format("%-5d %-30s %-30s %-10d", 1, "someTitle", "someAuthor", 1992)));
+            verify(consoleManagerMock).printBookList(books);
         }
     }
 
@@ -55,9 +54,7 @@ class OptionTest {
 
             when(consoleManager.getIntInput()).thenReturn(1);
             Book oneBook = new Book(1, "someTitle", "someAuthor", 1989);
-            checkoutOption.execute(Arrays.asList(
-                    oneBook
-            ));
+            checkoutOption.execute(List.of(oneBook));
 
             assertTrue(oneBook.checkOutStatus);
         }
